--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
      <section class="section services container">
 
         <div class="header-wraper">
-          <header class="services__header">
-            <span class="services__span">SERVICES</span>
-            <h2 class="services__title">Your Path to Well-being</h2>
-            <p class="services__text">Discover expert guidance for a healthier mind and balanced life.</p>
+          <header class="header__center">
+            <span class="header__center-span">SERVICES</span>
+            <h2 class="header__center-title">Your Path to Well-being</h2>
+            <p class="header__center-text">Discover expert guidance for a healthier mind and balanced life.</p>
           </header>
         </div>
 
@@ -206,6 +206,73 @@
           </div>
           
         </div>
+      </section>
+
+      <section class="section">
+          <div class="partners container">
+            <ul class="partners__list">
+              <li class="partners__item">Our Partners</li>
+              <li class="partners__item"><img src="/images/partners/Wealthsimple.png" alt=""></li>
+              <li class="partners__item"><img src="./images/partners/Notion.png" alt=""></li>
+              <li class="partners__item"><img src="./images/partners/Medium.png" alt=""></li>
+              <li class="partners__item"><img src="./images/partners/braze.png" alt=""></li>
+              <li class="partners__item"><img src="./images/partners/sonos.png" alt=""></li>
+            </ul>
+          </div>
+      </section>
+
+      <section class="section">
+        <div class="resources container">
+          <div class="header-wraper">
+          <header class="header__center">
+            <span class="header__center-span">EXPLORE & LEARN</span>
+            <h2 class="header__center-title">Resources for Your Well-being</h2>
+            <p class="header__center-text">Explore expert insights, self-care guides, and tools to support your mental health.</p>
+          </header>
+        </div>
+
+          <div class="resources__body">
+            <ul class="resources__list">
+              <li class="resources__item">
+                <article class="resources-card">
+                    <h3 class="resources-card__title">Articles & Guides</h3>
+                    <p class="resources-card__text">Practical tips on stress management, mindfulness, and emotional resilience.</p>
+                    <button class="button resources-card__button ">Explore</button>
+                </article>
+            </li>
+            <li class="resources__item">
+                <article class="resources-card">
+                    <h3 class="resources-card__title">Articles & Guides</h3>
+                    <p class="resources-card__text">Practical tips on stress management, mindfulness, and emotional resilience.</p>
+                    <button class="button resources-card__button ">Explore</button>
+                </article>
+            </li>
+            <li class="resources__item">
+                <article class="resources-card">
+                    <h3 class="resources-card__title">Articles & Guides</h3>
+                    <p class="resources-card__text">Practical tips on stress management, mindfulness, and emotional resilience.</p>
+                    <button class="button resources-card__button ">Explore</button>
+                </article>
+            </li>
+          </ul>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="community container">
+            <div class="community__header">
+            <span class="community__span">COMMUNITY</span>
+            <h2 class="community__title">You’re Not Alone on This Journey</h2>
+            <p class="community__text">Connect with others, share experiences, and find encouragement in a safe, supportive space.</p>
+
+            <button class="button">Join The Community</button>
+          </div>
+
+          <img class="community__img" src="./images/community.png" height="443" width="712" alt="community">
+        </div>
+        
       </section>
 
   </main>
