--- a/index.html
+++ b/index.html
@@ -275,6 +275,89 @@
         
       </section>
 
+      <section class="section">
+        <div class="faq container">
+          <div class="faq-wraper">
+            <div class="faq__description">
+              <div class="faq__header">
+                <span class="faq__span">NEED HELP?</span>
+                <h2 class="faq__title">Frequently Asked Questions</h2>
+                <p class="faq__text">Find answers to common questions about our services, therapy, and mental well-being.</p>
+              </div>
+              <img class="faq__image" src="./images/faq.png" alt="" width="570" height="602">
+          </div>
+
+          <div class="faq__questions">
+            <div class="accordion">
+
+              <div class="accordion-item">
+                <div class="accordion-header">
+                  <div>How do I book a therapy session?</div>
+                  <div class="accordion__plus"></div>
+                </div>
+                <div class="accordion-content">
+                <p>This is the content for section 1. You can add any content here, including text, images, or other HTML elements.</p>
+                </div>
+              </div>
+
+               <div class="accordion-item">
+                <div class="accordion-header">
+                  <div>Are online sessions available?</div>
+                  <div class="accordion__plus"></div>
+                </div>
+                <div class="accordion-content">
+                <p>This is the content for section 1. You can add any content here, including text, images, or other HTML elements.</p>
+                </div>
+              </div>
+
+               <div class="accordion-item">
+                <div class="accordion-header">
+                  <div>What’s the difference between therapy and coaching?</div>
+                  <div class="accordion__plus"></div>
+                </div>
+                <div class="accordion-content">
+                <p>This is the content for section 1. You can add any content here, including text, images, or other HTML elements.</p>
+                </div>
+              </div>
+
+               <div class="accordion-item">
+                <div class="accordion-header">
+                  <div>Do I need a subscription to access services?</div>
+                  <div class="accordion__plus"></div>
+                </div>
+                <div class="accordion-content">
+                <p>This is the content for section 1. You can add any content here, including text, images, or other HTML elements.</p>
+                </div>
+              </div>
+
+
+               <div class="accordion-item">
+                <div class="accordion-header">
+                  <div>Can I switch therapists if I don’t feel the right connection?</div>
+                  <div class="accordion__plus"></div>
+                </div>
+                <div class="accordion-content">
+                <p>This is the content for section 1. You can add any content here, including text, images, or other HTML elements.</p>
+                </div>
+
+              </div>
+
+               <div class="accordion-item">
+                <div class="accordion-header">
+                  <div>Is my information and session history kept confidential?</div>
+                  <div class="accordion__plus"></div>
+                </div>
+                <div class="accordion-content">
+                <p>This is the content for section 1. You can add any content here, including text, images, or other HTML elements.</p>
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+
   </main>
 
   <!-- <footer class="footer">
